--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link type="image/x-icon" href="/img/quiki_tm.png" rel="icon" />
+    <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
   <body>
     <template class="quiki">
@@ -22,5 +22,5 @@ Copyright&copy;2018 Jonathan D. Lettvin, All Rights Reserved.
     </template>
   </body>
   <!-- script loading must come after </body> -->
-  <script type="text/javascript"  src="/js/quiki.js"></script>
+  <script type="text/javascript"  src="js/quiki.js"></script>
 </html>
