--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
   <body>
-    <template class="quiki">
+    <template class="quiki markdown">
 == hello ==
 # one
 # two
 How beautiful.
     </template>
-    <template id="Spanish" class="quiki">
+    <template id="Spanish" class="quiki markdown">
 == hola ==
 # uno
 # dos
