--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
   <body>
+    <template class="quiki syntax">
+    </template>
     <template class="quiki markdown">
 == hello ==
 # one
