moved markdown from templates to comments

--- a/index.html
+++ b/index.html
@@ -4,25 +4,22 @@
     <meta charset="utf-8" />
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
-  <body>
-    <template class="quiki syntax">
-    </template>
-    <template class="quiki markdown">
+  <body></body>
+  <!-- script loading must come after </body> -->
+  <script type="text/javascript"  src="js/quiki.js"></script>
+
+<!--quiki.markdown:
 == hello ==
 # one
 # two
 How beautiful.
-    </template>
-    <template id="Spanish" class="quiki markdown">
+-->
+
+<!--quiki.markdown:
 == hola ==
 # uno
 # dos
 Qué hermoso.
-    </template>
-    <template id="Legal" class="quiki">
-Copyright&copy;2018 Jonathan D. Lettvin, All Rights Reserved.
-    </template>
-  </body>
-  <!-- script loading must come after </body> -->
-  <script type="text/javascript"  src="js/quiki.js"></script>
+-->
+
 </html>
