--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+	<meta http-equiv="Expires" content="-1">
+	<meta http-equiv="Cache-control" content="no-cache">
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
   <body></body>
