moved markdown from templates to comments

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<meta http-equiv="Cache-control" content="no-cache">
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
   </head>
-  <body></body>
-  <!-- script loading must come after </body> -->
-  <script type="text/javascript"  src="js/quiki.js"></script>
+  <body>
 
 <!--quiki.markdown:
 == hello ==
@@ -24,4 +22,6 @@ How beautiful.
 Qué hermoso.
 -->
 
+  </body><!-- script loading must come after </body> -->
+  <script type="text/javascript"  src="js/quiki.js"></script>
 </html>
