--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-	<meta http-equiv="Expires" content="-1">
-	<meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Cache-control" content="no-cache">
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
-  </head>
-  <body>
 
 <!--quiki.markdown:
 == hello ==
@@ -22,6 +20,6 @@ How beautiful.
 Qué hermoso.
 -->
 
-  </body><!-- script loading must come after </body> -->
+  </head><body></body><!--quiki.js must come after </body>-->
   <script type="text/javascript"  src="js/quiki.js"></script>
 </html>
