--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="Expires" content="-1">
     <meta http-equiv="Cache-control" content="no-cache">
     <link type="image/x-icon" href="img/quiki_tm.png" rel="icon" />
-  </head><body>
 
 <!--quiki.markdown:
 == hello ==
@@ -22,6 +21,6 @@ How beautiful.
 Qué hermoso.
 -->
 
-  </body><!--quiki.js must come after </body>-->
+  </head><body></body><!--quiki.js must come after </body>-->
   <script type="text/javascript"  src="js/quiki.js"></script>
 </html>
