better examples for temp markdown

--- a/index.html
+++ b/index.html
@@ -14,24 +14,33 @@
 == Medium Title ==
 === small title ===
 
-# paragraphs
-# empties
-# subsubsection
-# subsection
-# section
+=== numbered list ===
 # !_underline_!
 # !=bold=!
 # !/italic/!
 # !-strike-!
-# ![http://google.com google]!
+# ![https://github.com/jlettvin/quiki URL]!
 
+=== bullet list ===
+* First item
+* Second item
+
+=== check list ===
+@_ Unchecked
+@1 priority 1
+@2 priority 2
+@+ checked
+@- dismissed
+@q arbitrary letter
+
+^^^^
 ___Indented 3.
 ^^^^
 __Indented 2.
 ^^^
 Not indented.
 ^^newline
-
+^^^^
 Image:
 !{img/quiki_tm.png favicon}!
 
@@ -53,6 +62,9 @@ Line 2
 !]]Centered[[!
 
 !]]Right Aligned]]!
+
+ Preformatted
+ fixed-width
 -->
 
   </head><body></body><!--quiki.js must come after </body>-->
