variety of improvements.

--- a/index.html
+++ b/index.html
@@ -9,62 +9,13 @@
 
 <!--quiki.markdown:
 
+!{img/quiki_tm.png}!
+= QUIKI&trade; =
+== Client-Side Markdown ==
+=== useful for rapid page authoring ===
+* ![https://github.com/jlettvin/quiki repository]!
+* ![test.html TEST]!
 
-= BIG TITLE =
-== Medium Title ==
-=== small title ===
-
-=== numbered list ===
-# !_underline_!
-# !=bold=!
-# !/italic/!
-# !-strike-!
-# ![https://github.com/jlettvin/quiki URL]!
-
-=== bullet list ===
-* First item
-* Second item
-
-=== check list ===
-@_ Unchecked
-@1 priority 1
-@9 priority 9
-@+ checked
-@- dismissed
-@? arbitrary char
-
-^^^^
-___Indented 3.
-^^^^
-__Indented 2.
-^^^
-Not indented.
-^^newline
-^^^^
-Image:
-!{img/quiki_tm.png favicon}!
-
-Image with URL (TODO):
-!{img/quiki_tm.png https://github.com/jlettvin/quiki}!
-
-Horizontal line
-_____
-
-Comment:
-; This text should not appear.
-^^^
-Multiline Comment:
-;[
-Line 1
-Line 2
-;]
-^^^
-!]]Centered[[!
-
-!]]Right Aligned]]!
-
- Preformatted
- fixed-width
 -->
 
   </head><body></body><!--quiki.js must come after </body>-->
